testcases/negative/missing_version.vcf
BEGIN:VCARD
FN:John Doe
N:Doe;John;;;
END:VCARD
